# cloud-agent-platform

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DScode项目深度技术解析.md  README.md  config.json.example  config.py  main.py  pyproject.toml  requirements.txt  test_bash_fix.py  架构.md
.claude/skills/: code_review.py  verify.py
.claude/workflows/: ci-check.py
agent/: __init__.py  agent.py
llmapi/: LLMAPI.py  __init__.py
session/: __init__.py  manager.py  models.py
tests/: conftest.py  test_session_manager.py  test_session_models.py  test_tools_base.py  test_tools_registry.py
tools/: __init__.py  ask_user.py  base.py  create_cron.py  edit_file.py  enter_plan_mode.py  glob_search.py  grep_search.py  read_file.py  registry.py  run_bash.py  run_workflow.py  start_agent.py  task_create.py  task_update.py  use_skill.py  web_fetch.py  web_search.py  write_file.py
ui/: __init__.py  completer.py  input_handler.py  spinner.py
