[project]
name = "DScode"
version = "0.1.0"
description = "DScode — 基于 Python 的 AI Agent 工具框架"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.0",
    "httpx>=0.28",
    "pydantic>=2.0",
    "prompt-toolkit>=3.0",
]

[project.scripts]
DScode = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]

[tool.setuptools]
packages = ["agent", "llmapi", "session", "tools", "ui"]
py-modules = ["config", "main"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
